updates-to-community-import-pattern (#1366)
* updates-to-community-import-pattern

* Apply suggestions from code review

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Anchor Links and inline notification

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/community/patterns/import-pattern/index.mdx
+++ b/src/pages/community/patterns/import-pattern/index.mdx
@@ -5,13 +5,25 @@ description: The import action transfers data or objects from an external source
 
 #### Maintainers:
 
-[Vikki Paterson](https://github.com/vikkipaterson)
+[Vikki Paterson](https://github.com/vikkipaterson), [Chloe Poulter](https://github.com/chloepoulterdesign)
 
 <PageDescription>
 
 The import action transfers data or objects from an external source into a system.
 
 </PageDescription>
+
+<InlineNotification>
+
+This pattern uses Carbon's [File uploader](https://www.carbondesignsystem.com/components/file-uploader/usage/) (drag & drop) component.
+
+</InlineNotification>
+
+<AnchorLinks>
+  <AnchorLink>Choose a file (modal)</AnchorLink>
+  <AnchorLink>Choose a file (full page or side-panel)</AnchorLink>
+  <AnchorLink>Future considerations</AnchorLink>
+</AnchorLinks>
 
 ![Example of an import modal](/images/0.png)
 
@@ -146,3 +158,7 @@ If your product supports importing from a URL, use this method.
 
 </Column>
 </Row>
+
+## Future considerations
+
+We understand that some content in this pattern duplicates Carbon's File uploader component.
