--- a/src/pages/how-to-contribute/contribute-pictograms.mdx
+++ b/src/pages/how-to-contribute/contribute-pictograms.mdx
@@ -51,7 +51,7 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 
 1. Draw a 32 x 32 px artboard. 32 px pictograms should have 1 px padding.
 1. Place the pictogram squarely on the artboard, making sure it’s aligned to the pixel grid.
-1. Convert all strokes to outlines(Shift + ⌘ + O)
+1. Convert all strokes to outlines (Shift + ⌘ + O)
 1. Select any overlapping shapes and click the Union icon from the top navigation to merge all of the shapes together.
 1. Make sure the icon is at #000000 and has no additional styling.
 1. Select the entire artboard (not just the icon).
@@ -85,7 +85,7 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 
 ## Contribution process
 
-Does your pictogram have potential for other materials at IBM? If so, please consider contributing to the design system. IBM welcomes pictogram contributions in the form of a pull request to our pictogram repository (coming soon). For now, to make a pull request, **[please submit an issue in the repo](https://github.ibm.com/brand/Pictograms/issues/new/choose)** with the pictogram attached.
+Does your pictogram have potential for other materials at IBM? If so, please consider contributing to the design system. IBM welcomes pictogram contributions in the form of a pull request to our pictogram repository. For now, to make a pull request, **[please submit an issue in the repo](https://github.ibm.com/brand/Pictograms/issues/new/choose)** with the pictogram attached.
 
 Please note that Carbon contribution is not required in order to introduce a new pictogram into your materials. If your pictogram is determined to be broadly useful in Carbon and passes IBM Brand design reviews, then it may also be integrated into the design system.
 
