Remove leading '$' from bash commands

--- a/src/pages/get-started/develop/angular.mdx
+++ b/src/pages/get-started/develop/angular.mdx
@@ -43,10 +43,10 @@ The Angular library is maintained by members of the Carbon community. For suppor
 
 Assuming we're starting with a new @angular/cli project:
 
-```sh
-$ npx @angular/cli new my-project --style=scss
-$ cd my-project
-$ npm i --save carbon-components-angular carbon-components
+```bash
+npx @angular/cli new my-project --style=scss
+cd my-project
+npm i --save carbon-components-angular carbon-components
 ```
 
 Then we need to include carbon-components in `src/styles.scss`:
@@ -57,8 +57,8 @@ Then we need to include carbon-components in `src/styles.scss`:
 
 That's it! Now start the server and start building.
 
-```sh
-$ npm start
+```bash
+npm start
 ```
 
 _Note: This isn't the only way to bootstrap a_ `carbon-components-angular` _application, but the combination of_ `@angular/cli` _and the_ `carbon-components` _scss is our recommended setup._
