--- a/src/pages/get-started/develop/react.mdx
+++ b/src/pages/get-started/develop/react.mdx
@@ -46,7 +46,7 @@ The library provides front-end developers & engineers a collection of reusable R
 <Title> Using npm: </Title>
 
 ```bash
-$ npm install --save carbon-components-react carbon-components carbon-icons
+npm install --save carbon-components-react carbon-components carbon-icons
 ```
 
 <Title>
@@ -54,7 +54,7 @@ $ npm install --save carbon-components-react carbon-components carbon-icons
 </Title>
 
 ```bash
-$ yarn add carbon-components-react carbon-components carbon-icons
+yarn add carbon-components-react carbon-components carbon-icons
 ```
 
 ## Getting started
@@ -76,7 +76,7 @@ We recommend the use of [React Storybook](https://github.com/storybooks/react-st
 <Title> Start the server: </Title>
 
 ```bash
-$ yarn storybook
+yarn storybook
 ```
 
 2.  Open browser to `http://localhost:9000/`.
