--- a/src/pages/get-started/develop/vanilla.mdx
+++ b/src/pages/get-started/develop/vanilla.mdx
@@ -23,7 +23,7 @@ The library provides front-end developers & engineers a collection of reusable H
 <Title> Using npm: </Title>
 
 ```bash
-$ npm install --save carbon-components
+npm install --save carbon-components
 ```
 
 <Title>
@@ -31,7 +31,7 @@ $ npm install --save carbon-components
 </Title>
 
 ```bash
-$ yarn add carbon-components
+yarn add carbon-components
 ```
 
 _NB: March 29, 2019 - Please use the @next tag to install Carbon v10 components. e.g. `npm i carbon-components@next`._
