--- a/src/pages/get-started/develop/vue.mdx
+++ b/src/pages/get-started/develop/vue.mdx
@@ -43,22 +43,21 @@ The Vue library is maintained by members of the Carbon community. For support, c
 
 Assuming we're starting with a new Vue CLI project:
 
-```sh
-$ vue create my-project
-? Please pick a preset: default (babel, eslint)
-$ cd my-project
+```bash
+vue create --default my-project
+cd my-project
 ```
 
 Using Yarn
 
-```sh
-$ yarn add @carbon/vue
+```bash
+yarn add @carbon/vue
 ```
 
 Or npm
 
-```sh
-$ npm install @carbon/vue
+```bash
+npm install @carbon/vue
 ```
 
 In src/main.js, after "import Vue from 'vue'", add the following to include the carbon styles and components.
@@ -135,14 +134,14 @@ That's it! Now start the server and start building.
 
 Using Yarn
 
-```sh
-$ yarn serve
+```bash
+yarn serve
 ```
 
 Or npm
 
-```sh
-$ npm serve
+```bash
+npm serve
 ```
 
 _Note: This isn't the only way to bootstrap a_ `carbon-components-vue` _application, but the combination of_ `Vue CLI` _and the_ `carbon-components` _scss is our recommended setup._
