--- a/src/pages/tutorial/react/step-1.mdx
+++ b/src/pages/tutorial/react/step-1.mdx
@@ -54,8 +54,8 @@ To begin, fork [carbon-tutorial](https://github.com/carbon-design-system/carbon-
 Go to your forked repository, copy the SSH or HTTPS URL and in your terminal run the two commands to get the repository in your local file system and enter that directory.
 
 ```bash
-$ git clone [your fork SSH/HTTPS]
-$ cd carbon-tutorial
+git clone [your fork SSH/HTTPS]
+cd carbon-tutorial
 ```
 
 ### Add upstream remote
@@ -63,19 +63,19 @@ $ cd carbon-tutorial
 Add a remote called `upstream` so we can eventually submit a pull request once you have completed this tutorial step.
 
 ```bash
-$ git remote add upstream git@github.com:carbon-design-system/carbon-tutorial.git
+git remote add upstream git@github.com:carbon-design-system/carbon-tutorial.git
 ```
 
 Or, if you prefer to use HTTPS instead of SSH with your remotes:
 
 ```bash
-$ git remote add upstream https://github.com/carbon-design-system/carbon-tutorial.git
+git remote add upstream https://github.com/carbon-design-system/carbon-tutorial.git
 ```
 
 Verify that your forked repository remotes are correct:
 
 ```bash
-$ git remote -v
+git remote -v
 ```
 
 Your terminal should output something like this:
@@ -92,8 +92,8 @@ upstream	git@github.com:carbon-design-system/carbon-tutorial.git (push)
 Now that we have our repository set up, let's check out the branch for this tutorial step's starting point. Run the two commands:
 
 ```bash
-$ git fetch upstream
-$ git checkout -b react-step-1 upstream/react-step-1
+git fetch upstream
+git checkout -b react-step-1 upstream/react-step-1
 ```
 
 ## Build and start
@@ -101,13 +101,13 @@ $ git checkout -b react-step-1 upstream/react-step-1
 We have the repository forked to your GitHub account, cloned down to your machine, and the starting branch checked out. Next, install the React app's dependencies with:
 
 ```bash
-$ yarn
+yarn
 ```
 
 After the dependencies are installed, you can start the app with:
 
 ```bash
-$ yarn start
+yarn start
 ```
 
 Your default browser should open up with an empty page that says: `Hello Carbon! Well, not quite yet. This is the starting point for the Carbon tutorial.`
@@ -123,7 +123,7 @@ Even though we installed existing dependencies, we've yet to install the Carbon 
 Stop your development server with `CTRL-C` and install Carbon dependencies with:
 
 ```bash
-$ yarn add carbon-components@10.3.0 carbon-components-react@7.3.0 @carbon/icons-react@10.3.0 carbon-icons@7.0.7
+yarn add carbon-components@10.3.0 carbon-components-react@7.3.0 @carbon/icons-react@10.3.0 carbon-icons@7.0.7
 ```
 
 ## Install and build Sass
@@ -131,7 +131,7 @@ $ yarn add carbon-components@10.3.0 carbon-components-react@7.3.0 @carbon/icons-
 We need to run a Sass build as the Carbon styles are authored in Sass, so run the following command to install `node-sass` as a dependency.
 
 ```bash
-$ yarn add node-sass@4.12.0
+yarn add node-sass@4.12.0
 ```
 
 To avoid having to add the `~` prefix when importing SCSS files from `node_modules`, create a `.env` file at the project root that contains:
@@ -149,7 +149,7 @@ SASS_PATH=./node_modules
 Then, start the app again. If your app's currently running, you'll need to restart it for the new environment variable to be used.
 
 ```bash
-$ yarn start
+yarn start
 ```
 
 The app looks as it did before. Next, let's prepare our app for a Sass build.
@@ -446,8 +446,8 @@ Awesome! We've just created our content pages. Next thing we need to do is rende
 We've updated our app to render our header, but now we need to add routing functionality. To do this we need to install `react-router-dom`. Go ahead and stop your development server (with `CTRL-C`) and then:
 
 ```bash
-$ yarn add react-router-dom@5.0.0
-$ yarn start
+yarn add react-router-dom@5.0.0
+yarn start
 ```
 
 First, we need to wrap our app in the `Router` component. In the root `index.js`, add the import:
@@ -531,7 +531,7 @@ We're going to submit a pull request to verify completion of this tutorial step 
 We have a `ci-check` script defined in `package.json` that verifies file formatting for files that have been touched since the last Git commit with a tool called [Prettier](https://prettier.io). You'd typically also have that script run your test suite as part of your CI build. Go ahead and make sure everything looks good with:
 
 ```bash
-$ yarn ci-check
+yarn ci-check
 ```
 
 <InlineNotification>
@@ -545,7 +545,7 @@ $ yarn ci-check
 Before we can create a pull request, stage and commit all of your changes:
 
 ```bash
-$ git add --all && git commit -m "feat(tutorial): complete step 1"
+git add --all && git commit -m "feat(tutorial): complete step 1"
 ```
 
 <InlineNotification>
@@ -557,7 +557,7 @@ $ git add --all && git commit -m "feat(tutorial): complete step 1"
 Then, push to your repository:
 
 ```bash
-$ git push origin react-step-1
+git push origin react-step-1
 ```
 
 <InlineNotification>
