--- a/src/pages/tutorial/react/step-2.mdx
+++ b/src/pages/tutorial/react/step-2.mdx
@@ -52,8 +52,8 @@ This tutorial has an accompanying GitHub repository called [carbon-tutorial](htt
 With your repository all set up, let's check out the branch for this tutorial step's starting point.
 
 ```bash
-$ git fetch upstream
-$ git checkout -b react-step-2 upstream/react-step-2
+git fetch upstream
+git checkout -b react-step-2 upstream/react-step-2
 ```
 
 <InlineNotification>
@@ -67,13 +67,13 @@ $ git checkout -b react-step-2 upstream/react-step-2
 Install the app's dependencies (in case you're starting fresh in your current directory and not continuing from the previous step):
 
 ```bash
-$ yarn
+yarn
 ```
 
 Then, start the app:
 
 ```bash
-$ yarn start
+yarn start
 ```
 
 You should see something similar to where the [previous step](/tutorial/react/step-1) left off.
@@ -101,7 +101,7 @@ import "core-js/modules/es7.object.values";
 In our last step we added our styles, component and icon packages. Now that we're building the pages with grid, we need to install one more Carbon package. Stop your development environment (`CTRL-C`) and:
 
 ```bash
-$ yarn add @carbon/grid
+yarn add @carbon/grid
 ```
 
 In `index.scss`, we need to configure our grid to use 16 columns instead of the default 12 columns. We do this by adding `grid-columns-16: true` in our `$feature-flags`.
@@ -754,7 +754,7 @@ We're going to submit a pull request to verify completion of this tutorial step.
 Run the CI check to make sure we're all set to submit a pull request.
 
 ```bash
-$ yarn ci-check
+yarn ci-check
 ```
 
 <InlineNotification>
@@ -768,13 +768,13 @@ $ yarn ci-check
 Before we can create a pull request, stage and commit all of your changes:
 
 ```bash
-$ git add --all && git commit -m "feat(tutorial): complete step 2"
+git add --all && git commit -m "feat(tutorial): complete step 2"
 ```
 
 Then, push to your repository:
 
 ```bash
-$ git push origin react-step-2
+git push origin react-step-2
 ```
 
 <InlineNotification>
