--- a/src/pages/tutorial/react/step-3.mdx
+++ b/src/pages/tutorial/react/step-3.mdx
@@ -55,8 +55,8 @@ This tutorial has an accompanying GitHub repository called [carbon-tutorial](htt
 With your repository all set up, let's check out the branch for this tutorial step's starting point.
 
 ```bash
-$ git fetch upstream
-$ git checkout -b react-step-3 upstream/react-step-3
+git fetch upstream
+git checkout -b react-step-3 upstream/react-step-3
 ```
 
 ### Build and start app
@@ -64,13 +64,13 @@ $ git checkout -b react-step-3 upstream/react-step-3
 Install the app's dependencies:
 
 ```bash
-$ yarn
+yarn
 ```
 
 Then, start the app:
 
 ```bash
-$ yarn start
+yarn start
 ```
 
 You should see something similar to where the [previous step](/tutorial/react/step-2) left off. Stop your app with `CTRL-C` and let's get everything installed.
@@ -86,7 +86,7 @@ We'll need to install three new dependencies to incorporate Apollo into our appl
 Install them with the command:
 
 ```bash
-$ yarn add apollo-boost@0.4.2 graphql@14.3.1 react-apollo@2.5.6
+yarn add apollo-boost@0.4.2 graphql@14.3.1 react-apollo@2.5.6
 ```
 
 ## Create access token
@@ -461,7 +461,7 @@ We're going to submit a pull request to verify completion of this tutorial step.
 Run the CI check to make sure we're all set to submit a pull request.
 
 ```bash
-$ yarn ci-check
+yarn ci-check
 ```
 
 <InlineNotification>
@@ -475,13 +475,13 @@ $ yarn ci-check
 Before we can create a pull request, stage and commit all of your changes:
 
 ```bash
-$ git add --all && git commit -m "feat(tutorial): complete step 3"
+git add --all && git commit -m "feat(tutorial): complete step 3"
 ```
 
 Then, push to your repository:
 
 ```bash
-$ git push origin react-step-3
+git push origin react-step-3
 ```
 
 <InlineNotification>
