--- a/src/pages/tutorial/react/step-4.mdx
+++ b/src/pages/tutorial/react/step-4.mdx
@@ -53,8 +53,8 @@ This tutorial has an accompanying GitHub repository called [carbon-tutorial](htt
 With your repository all set up, let's check out the branch for this tutorial step's starting point.
 
 ```bash
-$ git fetch upstream
-$ git checkout -b react-step-4 upstream/react-step-4
+git fetch upstream
+git checkout -b react-step-4 upstream/react-step-4
 ```
 
 <InlineNotification>
@@ -68,13 +68,13 @@ $ git checkout -b react-step-4 upstream/react-step-4
 Install the app's dependencies (in case you're starting fresh in your current directory and not continuing from the previous step):
 
 ```bash
-$ yarn
+yarn
 ```
 
 Then, start the app:
 
 ```bash
-$ yarn start
+yarn start
 ```
 
 You should see something similar to where the [previous step](/tutorial/react/step-3) left off.
@@ -391,7 +391,7 @@ We're going to submit a pull request to verify completion of this tutorial step.
 Run the CI check to make sure we're all set to submit a pull request.
 
 ```bash
-$ yarn ci-check
+yarn ci-check
 ```
 
 <InlineNotification>
@@ -405,13 +405,13 @@ $ yarn ci-check
 Before we can create a pull request, stage and commit all of your changes:
 
 ```bash
-$ git add --all && git commit -m "feat(tutorial): complete step 4"
+git add --all && git commit -m "feat(tutorial): complete step 4"
 ```
 
 Then, push to your repository:
 
 ```bash
-$ git push origin react-step-4
+git push origin react-step-4
 ```
 
 <InlineNotification>
