--- a/src/pages/tutorial/vue/step-3.mdx
+++ b/src/pages/tutorial/vue/step-3.mdx
@@ -56,8 +56,8 @@ This tutorial has an accompanying GitHub repository called [carbon-tutorial-vue]
 With your repository all set up, let's check out the branch for this tutorial step's starting point.
 
 ```bash
-$ git fetch upstream
-$ git checkout -b vue-step-3 upstream/vue-step-3
+git fetch upstream
+git checkout -b vue-step-3 upstream/vue-step-3
 ```
 
 ### Build and start app
@@ -65,13 +65,13 @@ $ git checkout -b vue-step-3 upstream/vue-step-3
 Install the app's dependencies:
 
 ```bash
-$ yarn
+yarn
 ```
 
 Then, start the app:
 
 ```bash
-$ yarn serve
+yarn serve
 ```
 
 You should see something similar to where the [previous step](/tutorial/vue/step-2) left off. Stop your app with `CTRL-C` and let's get everything installed.
@@ -95,7 +95,7 @@ Install the following
 Using the command:
 
 ```bash
-$ vue add apollo
+vue add apollo
 ```
 
 At the following prompts answer 'No' to each of the questions.
@@ -566,7 +566,7 @@ We're going to submit a pull request to verify completion of this tutorial step.
 Run the CI check to make sure we're all set to submit a pull request.
 
 ```bash
-$ yarn ci-check
+yarn ci-check
 ```
 
 <InlineNotification>
@@ -580,13 +580,13 @@ $ yarn ci-check
 Before we can create a pull request, stage and commit all of your changes:
 
 ```bash
-$ git add --all && git commit -m "feat(tutorial): complete step 3"
+git add --all && git commit -m "feat(tutorial): complete step 3"
 ```
 
 Then, push to your repository:
 
 ```bash
-$ git push origin vue-step-3
+git push origin vue-step-3
 ```
 
 <InlineNotification>
