--- a/src/pages/tutorial/vue/step-1.mdx
+++ b/src/pages/tutorial/vue/step-1.mdx
@@ -53,8 +53,8 @@ To begin, fork [carbon-tutorial-vue](https://github.com/carbon-design-system/car
 Go to your forked repository, copy the SSH or HTTPS URL and in your terminal run the two commands to get the repository in your local file system and enter that directory.
 
 ```bash
-$ git clone [your fork SSH/HTTPS]
-$ cd carbon-tutorial-vue
+git clone [your fork SSH/HTTPS]
+cd carbon-tutorial-vue
 ```
 
 ### Add upstream remote
@@ -62,19 +62,19 @@ $ cd carbon-tutorial-vue
 Add a remote called `upstream` so we can eventually submit a pull request once you have completed this tutorial step.
 
 ```bash
-$ git remote add upstream git@github.com:carbon-design-system/carbon-tutorial-vue.git
+git remote add upstream git@github.com:carbon-design-system/carbon-tutorial-vue.git
 ```
 
 Or, if you prefer to use HTTPS instead of SSH with your remotes:
 
 ```bash
-$ git remote add upstream https://github.com/carbon-design-system/carbon-tutorial-vue.git
+git remote add upstream https://github.com/carbon-design-system/carbon-tutorial-vue.git
 ```
 
 Verify that your forked repository remotes are correct:
 
 ```bash
-$ git remote -v
+git remote -v
 ```
 
 Your terminal should output something like this:
@@ -91,8 +91,8 @@ upstream	git@github.com:carbon-design-system/carbon-tutorial-vue.git (push)
 Now that we have our repository set up, let's check out the branch for this tutorial step's starting point. Run the two commands:
 
 ```bash
-$ git fetch upstream
-$ git checkout -b vue-step-1 upstream/vue-step-1
+git fetch upstream
+git checkout -b vue-step-1 upstream/vue-step-1
 ```
 
 ## Build and start
@@ -100,13 +100,13 @@ $ git checkout -b vue-step-1 upstream/vue-step-1
 We have the repository forked to your GitHub account, cloned down to your machine, and the starting branch checked out. Next, install the Vue app's dependencies with:
 
 ```bash
-$ yarn
+yarn
 ```
 
 After the dependencies are installed, you can start the app with:
 
 ```bash
-$ yarn serve
+yarn serve
 ```
 
 Your default browser should open up with an empty page that says: `Hello Carbon! Well, not quite yet. This is the starting point for the Carbon tutorial.`
@@ -124,7 +124,7 @@ Even though we installed existing dependencies, we've yet to install the Carbon 
 Stop your development server with `CTRL-C` and install Carbon dependencies with:
 
 ```bash
-$ yarn add carbon-components @carbon/vue @carbon/icons-vue
+yarn add carbon-components @carbon/vue @carbon/icons-vue
 ```
 
 ## Other dependencies
@@ -154,7 +154,7 @@ SASS_PATH=./node_modules
 Then, start the app again. If your app's currently running, you'll need to restart it for the new environment variable to be used.
 
 ```bash
-$ yarn serve
+yarn serve
 ```
 
 The app looks as it did before. Next, let's add Carbon styling.
@@ -577,7 +577,7 @@ We're going to submit a pull request to verify completion of this tutorial step 
 We have a `ci-check` script defined in `package.json` that verifies file formatting for files that have been touched since the last Git commit with a tool called [Prettier](https://prettier.io). You'd typically also have that script run your test suite as part of your CI build. Go ahead and make sure everything looks good with:
 
 ```bash
-$ yarn ci-check
+yarn ci-check
 ```
 
 <InlineNotification>
@@ -595,7 +595,7 @@ $ yarn ci-check
 Before we can create a pull request, stage and commit all of your changes:
 
 ```bash
-$ git add --all && git commit -m "feat(tutorial): complete step 1"
+git add --all && git commit -m "feat(tutorial): complete step 1"
 ```
 
 <!-- Stephane: I can't see any files changed or commited from me in that directory,
@@ -605,7 +605,7 @@ $ git add --all && git commit -m "feat(tutorial): complete step 1"
 Then, push to your repository:
 
 ```bash
-$ git push origin vue-step-1
+git push origin vue-step-1
 ```
 
 <InlineNotification>
