--- a/src/pages/how-to-contribute/contribute-icons.mdx
+++ b/src/pages/how-to-contribute/contribute-icons.mdx
@@ -18,7 +18,7 @@ description: Icons are visual symbols used to represent ideas, objects, or actio
 Don't see the icon you need in the library? Make your own! Follow these guidelines to ensure visual consistency and proper formatting.
 
 - All icons should be unique and not redundant with any existing icons in the system. Search the [library](/guidelines/icons/library) for the keyword(s) associated with your proposed new icon to ensure that it is not already represented.
-- All icons should adhere to the [IBM Design Language visual style](https://w3.ibm.com/design/language/elements/icons/).
+- All icons should adhere to the [IBM Design Language visual style](https://www.ibm.com/design/language/iconography/ui-icons/library).
 - All icons should comply with IBM [accessibility standards](/guidelines/accessibility/overview).
 - All icons should be usable across all supported platforms and devices.
 - All icons should be understandable by a global audience of users, regardless of nationality or language.
