--- a/src/pages/data-visualization/basic-charts/index.mdx
+++ b/src/pages/data-visualization/basic-charts/index.mdx
@@ -58,7 +58,7 @@ Note: These charts are currently a work-in-progress. To see our roadmap, request
 
 </InlineNotification>
 
-Meter charts are useful for showing values between a small number of variables either by using multiple markers on the same meter or by using multiples of the chart.
+Meter charts are useful for showing values between a small number of variables either by using multiple markers on the same meter, or by using multiples of the chart.
 
 <Row>
 <Column colMd={4} colLg={4}>
