chore(about-carbon): fix typo in contribution section

--- a/src/pages/get-started/about-carbon.mdx
+++ b/src/pages/get-started/about-carbon.mdx
@@ -73,7 +73,7 @@ We bring experimental components and patterns into the design library as quickly
 
 **Beta status means there are few or no duplicate patterns.** Guidance on the site is reasonably complete and useful. Maintainers are identified and committed to ongoing support. The intention is to go to production with only minor changes based on user feedback.
 
-**Production status there are no duplicate patterns.** These offer high-quality guidance. Design symbols and code components are available. Maintainers know to monitor support channels for their patterns.
+**Production status means there are no duplicate patterns.** These offer high-quality guidance. Design symbols and code components are available. Maintainers know to monitor support channels for their patterns.
 
 ## Certificate of Originality
 
