Removed gauge and stacked area from design only (#1391)
* Removed meter and stacked area from design only

* Update src/pages/data-visualization/basic-charts/index.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/data-visualization/basic-charts/index.mdx
+++ b/src/pages/data-visualization/basic-charts/index.mdx
@@ -49,27 +49,16 @@ Note: These charts are currently a work-in-progress. To see our roadmap, request
 
 </InlineNotification>
 
-### Stacked area chart
 
-Stacked area charts are useful for comparing proportional contributions within a category. They plot the relative value that each data series contributes to the total.
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-
-![Horizontal bar chart](images/charts-basic-areastacked.png)
-
-</Column>
-</Row>
-
-### Meter and gauge
+### Meter
 
 <InlineNotification>
 
-**Note:** Meter and gauge charts are not yet available in Carbon Charts. These explorations are subject to change.
+**Note:** Meter charts are not yet available in Carbon Charts. These explorations are subject to change.
 
 </InlineNotification>
 
-Meter and gauge charts are useful for showing values between a small number of variables either by using multiple markers on the same meter or gauge or by using multiples of the chart.
+Meter charts are useful for showing values between a small number of variables either by using multiple markers on the same meter, or by using multiples of the chart.
 
 <Row>
 <Column colMd={4} colLg={4}>
@@ -79,15 +68,5 @@ Meter and gauge charts are useful for showing values between a small number of v
 <Caption>
 Meter charts can represent data with current value, minimum and maximum, and peaks or averages.
 </Caption>
-</Column>
-
-<Column colMd={4} colLg={4}>
-
-![Gauge](images/charts-basic-gauge.png)
-
-<Caption>
-  Gauge animates to the current value when dashboard loads to create emphasis.
-</Caption>
-
 </Column>
 </Row>
