--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -303,6 +303,16 @@ Carbon delivers the [IBM Design Language](https://www.ibm.com/design/language/) 
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon Devtools"
+    href="https://github.com/carbon-design-system/devtools"
+    >
+
+![](images/carbon-devtools.png)
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Reading
