feat: clean up code, add dark mode

--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -26,7 +26,11 @@ The color palette for data visualizations is a select subset of the IBM Design L
 
 <ColorPalette type="categorical" />
 
-<ColorPalette type="sequential" />
+<ColorPalette type="grouped" />
+
+<ColorPalette type="sequential" isMono />
+
+<ColorPalette type="sequential" isDiverging />
 
 ## Resources
 
