docs(style): text input

--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -24,21 +24,24 @@ Inputs come in two different colors. The default input color is `$field-01` and 
 
 </div>
 
-<Caption>
-  Examples of default and user-input states for text input in both $field-02
-  (left) and $field-01 (right)
-</Caption>
-
 ### Interactive states
 
-| Class                      | Property   | Color token   |
-| -------------------------- | ---------- | ------------- |
-| `.bx--text-input:focus`    | outline    | `$focus`      |
-| `.bx--text-input--invalid` | outline    | `$support-01` |
-| `.bx--form-requirement`    | text color | `$support-01` |
-| `.warning--filled`         | svg        | `$support-01` |
-| `.bx--text-input:disabled` | background | `$disabled-01`|
-| `.bx--text-input:disabled` | text color | `$disabled-02`|
+| Class                      | Property   | Color token    |
+| -------------------------- | ---------- | -------------- |
+| `.bx--text-input:focus`    | outline    | `$focus`       |
+| `.bx--text-input--invalid` | outline    | `$support-01`  |
+| `.bx--form-requirement`    | text color | `$support-01`  |
+| `.warning--filled`         | svg        | `$support-01`  |
+| `.bx--text-input:disabled` | background | `$disabled-01` |
+| `.bx--text-input:disabled` | text color | `$disabled-02` |
+
+<Row>
+<Column colLg={8}>
+
+![text input interactive states](images/text-input-style-3.png)
+
+</Column>
+</Row>
 
 ## Typography
 
@@ -53,13 +56,18 @@ Text input labels and placeholder text should be set in sentence case, with only
 
 ## Structure
 
-| Class                   | Property                    | px / rem | Spacing token |
-| ----------------------- | --------------------------- | -------- | ------------- |
-| `.bx--text-input`       | height                      | 40 / 2.5 | –             |
-| `.bx--label`            | margin-bottom               | 8 / 0.5  | `$spacing-03` |
-| `.bx--text-input`       | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-| `.bx--text-input`       | border-bottom               | 1px      | –             |
-| `.bx--text-input:focus` | border                      | 2px      | –             |
+### Text input
+
+| Class                      | Property                    | px / rem | Spacing token |
+| -------------------------- | --------------------------- | -------- | ------------- |
+| `.bx--text-input: default` | height                      | 40 / 2.5 | –             |
+| `.bx--text-input: sm`      | height                      | 32 / 2   | –             |
+| `.bx--text-input: xl`      | height                      | 48 / 3   | –             |
+| `.bx--label`               | margin-bottom               | 8 / 0.5  | `$spacing-03` |
+| `.bx--form__helper-text`   | margin-top                  | 4 / 0.25 | `$spacing-02` |
+| `.bx--text-input`          | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+| `.bx--text-input`          | border-bottom               | 1px      | –             |
+| `.bx--text-input:focus`    | border                      | 2px      | –             |
 
 <div className="image--fixed">
 
@@ -69,12 +77,22 @@ Text input labels and placeholder text should be set in sentence case, with only
 
 <Caption>Structure and spacing measurements for text input | px / rem</Caption>
 
+### Text area
+
+| Class                     | Property                    | px / rem    | Spacing token |
+| ------------------------- | --------------------------- | ----------- | ------------- |
+| `.bx--text-area__wrapper` | height                      | varies      | –             |
+| `.bx--label`              | margin-bottom               | 8 / 0.5     | `$spacing-03` |
+| `.bx--form__helper-text`  | margin-top                  | 4 / 0.25    | `$spacing-02` |
+| `.bx--text-area__wrapper` | padding-left, padding-right | 16 / 1      | `$spacing-05` |
+| `.bx--text-area__wrapper` | padding-top, padding-bottom | 11 / 0.6875 | –             |
+| `.bx--text-area__wrapper` | border-bottom               | 1px         | –             |
+| `.bx--text-input:focus`   | border                      | 2px         | –             |
+
 <div className="image--fixed">
 
-![Active, help, error or disabled states for text input](images/text-input-style-3.png)
+![Structure and spacing measurements for text area](images/text-area-style-1.png)
 
 </div>
 
-<Caption>
-  Examples of active, help, error and disabled text input states
-</Caption>
+<Caption>Structure and spacing measurements for text input | px / rem</Caption>
