--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -23,7 +23,6 @@ Code snippets are strings or small blocks of reusable code that can be copied an
 <AnchorLink>Modifiers</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
-
 </AnchorLinks>
 
 import {
@@ -40,14 +39,16 @@ There are three different types of code snippets to help cater to varied line le
 | Type                        | Purpose                                                               |
 | --------------------------- | --------------------------------------------------------------------- |
 | [Inline](#inline)           | A block of text used inline with sentences or paragraphs.             |
-| [Single line](#single line) | A single line of code.                                                |
+| [Single line](#single-line) | A single line of code.                                                |
 | [Multi-line](#multiline)    | Multiple lines of code with the ability to show more or less strings. |
 
 ### When to use
+
 - Use a code snippet to help the user copy strings of text easily, or if you want to call out key words for the user.
 - Code snippets are typically used in code documentation to help the user get started quickly.
 
 ### When not to use
+
 - Do not use a code snippet if you want the user to change the input value. Our code snippets are read only.
 
 ## Live demo
@@ -120,34 +121,6 @@ There are three different types of code snippets to help cater to varied line le
 `}</ComponentVariant>
 </ComponentDemo>
 
-## Sample data
-
-```javascript
-const codeSnippet = `@mixin grid-container {
-  width: 100%;
-  padding-right: padding(mobile);
-  padding-left: padding(mobile);
-
-  @include breakpoint(bp--xs--major) {
-    padding-right: padding(xs);
-    padding-left: padding(xs);
-  }
-}
-
-$z-indexes: (
-  modal : 9000,
-  overlay : 8000,
-  dropdown : 7000,
-  header : 6000,
-  footer : 5000,
-  hidden : - 1,
-  overflowHidden: - 1,
-  floating: 10000
-);`;
-
-const codeSnippetSingle = `node -v`;
-```
-
 ## Formatting
 
 ### Anatomy
@@ -164,11 +137,11 @@ const codeSnippetSingle = `node -v`;
 2. **Copy button (optional)**: An icon button to copy the code to the clipboard.
 3. **Show more button (optional)**: A ghost button to expand or collapse the code snippet to show more or fewer lines of code.
 
-### Placement 
+### Placement
 
-Code snippet containers should vertically align to the grid with other form components on a page. 
+Code snippet containers should vertically align to the grid with other form components on a page.
 
-*Note: If using an inline code snippet, the snippet will live within a body of text.*
+_Note: If using an inline code snippet, the snippet will live within a body of text._
 
 <DoDontRow>
   <DoDont caption="Do align code snippet containers to the grid.">
@@ -183,7 +156,7 @@ Code snippet containers should vertically align to the grid with other form comp
   </DoDont>
 </DoDontRow>
 
-## Content 
+## Content
 
 ### Main elements
 
@@ -203,7 +176,7 @@ Code snippet containers should vertically align to the grid with other form comp
 
 For further content guidance, see Carbon's [content guidelines](notion://www.notion.so/guidelines/content/general).
 
-## Universal behaviors 
+## Universal behaviors
 
 ### Copy to clipboard
 
@@ -217,12 +190,11 @@ Code snippets by default have a copy functionality that allows users to copy the
 </Column>
 </Row>
 
-
 ## Interactions
 
 #### Mouse
 
-An inline code snippet can be copied by clicking anywhere on the snippet itself. 
+An inline code snippet can be copied by clicking anywhere on the snippet itself.
 
 <Row>
 <Column colLg={8}>
@@ -252,7 +224,7 @@ A multi-line code snippet can be copied by clicking on the copy icon or by manua
 </Column>
 </Row>
 
-#### Keyboard 
+#### Keyboard
 
 #### Copy button:
 
@@ -271,7 +243,7 @@ A multi-line code snippet can be copied by clicking on the copy icon or by manua
 - JAWS: Users can copy code by pressing `Space` while the copy button has screen reader focus.
 - NVDA: Users can copy code by pressing `Space` while the copy button has screen reader focus.
 
-## Inline 
+## Inline
 
 Use inline code snippets within bodies of text. Using code snippets inline helps create emphasis on important key words to copy and makes long bodies of text easier to scan. Refrain from having inline code snippets that extend to multiple lines.
 
@@ -335,7 +307,7 @@ A ghost button can be added to a multi-line code snippet to show more or fewer l
 
 #### Vertical scroll
 
-Alternatively, you can apply vertical scrolling to the code snippet if there are more than nine lines of code. 
+Alternatively, you can apply vertical scrolling to the code snippet if there are more than nine lines of code.
 
 #### Horizontal scroll
 
