--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -18,11 +18,13 @@ Inputs come in two different colors. The default input color is `$field-01` and 
 | `.bx--text-input--light`       | background-color | `$field-02` |
 | `.bx--text-input`              | border-bottom    | `$ui-04`    |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Default and user input states for text input in both field colors](images/text-input-style-1.png)
+![text input states](images/text-input-style-1.png)
 
-</div>
+</Column>
+</Row>
 
 ### Interactive states
 
@@ -95,4 +97,4 @@ Text input labels and placeholder text should be set in sentence case, with only
 
 </div>
 
-<Caption>Structure and spacing measurements for text input | px / rem</Caption>
+<Caption>Structure and spacing measurements for text area | px / rem</Caption>
