content edit typo

--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -40,7 +40,7 @@ There are three different types of code snippets to help cater to varied line le
 | --------------------------- | --------------------------------------------------------------------- |
 | [Inline](#inline)           | A block of text used inline with sentences or paragraphs.             |
 | [Single line](#single-line) | A single line of code.                                                |
-| [Multi-line](#multiline)    | Multiple lines of code with the ability to show more or less strings. |
+| [Multi-line](#multi-line)   | Multiple lines of code with the ability to show more or less strings. |
 
 ### When to use
 
@@ -230,7 +230,7 @@ A multi-line code snippet can be copied by clicking on the copy icon or by manua
 
 - The copy button can be focused by pressing `Tab`.
 - Once the copy button is in focus, the copy functionality can be activated by pressing either `Space` or `Enter`.
-- After the copy button is activated the focus remains on the button since there is no change in context.
+- After the copy button is activated, the focus remains on the button since there is no change in context.
 
 #### Show more button:
 
@@ -281,7 +281,7 @@ If the text in a single line code snippet is lengthy, the text overflows into a 
 
 ## Multi-line
 
-Use mutli-line code snippets for displaying multiple lines of code.
+Use multi-line code snippets for displaying multiple lines of code.
 
 <Row>
 <Column colLg={12}>
