docs: when not to use section

--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -39,6 +39,16 @@ Use a content switcher to give users alternate views of the same or similar cont
 </Column>
 </Row>
 
+### When not to use
+
+#### Tabs
+
+Use [tabs](/components/tabs/usage) when the content on the page is divided into related sections, but without any overlap. Tabs follow the metaphor for sections in a filing cabinet and two tabs wouldn’t contain the same sheet of paper. So the role of tabs in information hierarchy is to separate content.
+
+#### Toggle
+
+The content switcher is used for large groups of content, as opposed to the [toggle](/components/toggle/usage) which is meant for a “yes/no” or “on/off” binary decision.
+
 ## Live demo
 
 <ComponentDemo
