--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -6,7 +6,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
 
 <PageDescription>
 
-The content switcher is used to toggle between two or more content sections within the same space on screen.
+Content switchers allow users to toggle between two or more content sections within the same space on screen.
 
 </PageDescription>
 
